--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
